--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
-    "swiper": "^8.1.4"
+    "swiper": "^8.1.4",
+    "use-file-picker": "^1.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
