--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@graphql-tools/load-files": "^6.5.3",
+    "@graphql-tools/merge": "^8.2.10",
+    "@graphql-yoga/node": "^2.3.0",
     "date-fns": "^2.28.0",
+    "graphql": "^16.4.0",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
