--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@graphql-tools/load-files": "^6.5.3",
     "@graphql-tools/merge": "^8.2.10",
     "@graphql-yoga/node": "^2.3.0",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.28.0",
     "graphql": "^16.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.1",
+    "nanoid": "^3.3.3",
     "next": "12.1.5",
+    "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
