--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "graphql": "^16.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "mongoose-paginate-v2": "^1.6.3",
+    "mongoose-slug-updater": "^3.3.0",
     "nanoid": "^3.3.3",
     "next": "12.1.5",
     "nodemailer": "^6.7.3",
