--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
       "@components/*": ["components/*"],
       "@data/*": ["data/*"],
       "@utils": ["utils"],
+      "@graphql/*": ["graphql/*"]
     }
   }
 }
