--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.28.0",
     "graphql": "^16.4.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.1",
     "mongoose-paginate-v2": "^1.6.3",
     "mongoose-slug-updater": "^3.3.0",
@@ -26,6 +27,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
+    "react-moment": "^1.1.2",
     "react-nice-dates": "^3.1.0",
     "swiper": "^8.1.4",
     "use-file-picker": "^1.4.2"
