--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-moment": "^1.1.2",
     "react-nice-dates": "^3.1.0",
     "react-redux": "^8.0.1",
+    "react-spinners": "^0.11.0",
     "swiper": "^8.1.4",
     "use-file-picker": "^1.4.2"
   },
