--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@graphql-yoga/node": "^2.3.0",
     "@reduxjs/toolkit": "^1.8.1",
     "bcryptjs": "^2.4.3",
+    "cookies-next": "^2.0.4",
     "date-fns": "^2.28.0",
     "graphql": "^16.4.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "mongoose": "^6.3.1",
     "mongoose-paginate-v2": "^1.6.3",
@@ -33,6 +35,7 @@
     "react-nice-dates": "^3.1.0",
     "react-redux": "^8.0.1",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^8.2.0",
     "swiper": "^8.1.4",
     "use-file-picker": "^1.4.2"
   },
