--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.3.1",
     "react-moment": "^1.1.2",
     "react-nice-dates": "^3.1.0",
+    "react-phone-input-2": "^2.15.0",
     "react-redux": "^8.0.1",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
