feat: add image upload util

--- a/.env.local.example
+++ b/.env.local.example
@@ -11,3 +11,6 @@ SMTP_EMAIL=
 SMTP_PASSWORD=
 FROM_EMAIL=
 FROM_NAME=
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_PET_POST_UPLOAD_PRESET=
