--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@graphql-tools/merge": "^8.2.10",
     "@graphql-yoga/node": "^2.3.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.29.1",
     "cookies-next": "^2.0.4",
     "date-fns": "^2.28.0",
     "graphql": "^16.4.0",
@@ -24,7 +26,7 @@
     "mongoose": "^6.3.1",
     "mongoose-paginate-v2": "^1.6.3",
     "mongoose-slug-updater": "^3.3.0",
-    "nanoid": "^3.3.3",
+    "nanoid": "^3.3.4",
     "next": "12.1.5",
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
