--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "mongoose": "^6.3.1",
-    "mongoose-paginate-v2": "^1.6.3",
     "mongoose-slug-updater": "^3.3.0",
     "nanoid": "^3.3.4",
     "next": "12.1.5",
@@ -35,12 +34,16 @@
     "react-icons": "^4.3.1",
     "react-moment": "^1.1.2",
     "react-nice-dates": "^3.1.0",
+    "react-paginate": "^8.1.3",
     "react-phone-input-2": "^2.15.0",
     "react-redux": "^8.0.1",
+    "react-responsive": "^9.0.0-beta.8",
+    "react-select": "^5.3.2",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
     "swiper": "^8.1.4",
-    "use-file-picker": "^1.4.2"
+    "use-file-picker": "^1.4.2",
+    "use-turkey-cities": "^0.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
