--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@graphql-tools/merge": "^8.2.10",
     "@graphql-yoga/node": "^2.3.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.1",
