--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@graphql-yoga/node": "^2.3.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@sendgrid/mail": "^7.7.0",
+    "@tsndr/cloudflare-worker-jwt": "^1.2.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.1",
