--- a/.env.local.example
+++ b/.env.local.example
@@ -5,12 +5,7 @@ MONGODB_URI=
 JWT_SECRET=
 JWT_EXPIRE_TIME=30d
 
-SMTP_HOST=
-SMTP_PORT=
-SMTP_EMAIL=
-SMTP_PASSWORD=
-FROM_EMAIL=
-FROM_NAME=
-
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 NEXT_PUBLIC_CLOUDINARY_PET_POST_UPLOAD_PRESET=
+
+SENDGRID_API_KEY=
