--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@sendgrid/mail": "^7.7.0",
     "@tsndr/cloudflare-worker-jwt": "^1.2.0",
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.1",
@@ -31,6 +32,8 @@
     "next": "12.1.5",
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
+    "react-apexcharts": "^1.4.0",
+    "react-data-table-component": "^7.5.2",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
@@ -43,6 +46,7 @@
     "react-select": "^5.3.2",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
+    "styled-components": "^5.3.5",
     "swiper": "^8.1.4",
     "use-file-picker": "^1.4.2",
     "use-turkey-cities": "^0.1.1"
