--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose-slug-updater": "^3.3.0",
     "nanoid": "^3.3.4",
     "next": "12.1.5",
+    "next-seo": "^5.4.0",
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-apexcharts": "^1.4.0",
