--- a/.env.local.example
+++ b/.env.local.example
@@ -9,3 +9,5 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 NEXT_PUBLIC_CLOUDINARY_PET_POST_UPLOAD_PRESET=
 
 SENDGRID_API_KEY=
+
+NEXT_PUBLIC_GA_MEASUREMENT_ID=
