--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nanoid": "^3.3.4",
     "next": "12.1.5",
     "next-seo": "^5.4.0",
+    "nextjs-google-analytics": "^1.2.0",
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-apexcharts": "^1.4.0",
