--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
-    "webpack-graphql-loader": "^1.0.2"
+    "tailwindcss": "^3.0.24"
   }
 }
