--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-apexcharts": "^1.4.0",
+    "react-content-loader": "^6.2.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
